# colorator

./: Cargo.toml  bak.main.rs
src/: cli.rs  color.rs  functions.rs  main.rs  util.rs
